fix navigation to always be on top using z-index

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -16,6 +16,7 @@
       $color-primary-light,
       $color-primary-dark
     );
+    z-index: 1000;
   }
 
   &__nav {
